# hello-audio-stream

./: .gitignore  README.md  kill-8080.ps1  kill-8080.sh  readme.md
audio/input/: hello.opus
doc/: mmap.md
hello-cpp/: CMakeLists.txt  README.md
hello-cpp/client/: CMakeLists.txt
hello-cpp/client/include/: audio_client_application.h
hello-cpp/client/include/core/: chunk_manager.h  download_manager.h  file_manager.h  upload_manager.h  websocket_client.h
hello-cpp/client/include/util/: error_handler.h  performance_monitor.h  stream_id_generator.h  verification_module.h
hello-cpp/client/src/: audio_client_application.cpp
hello-cpp/client/src/core/: chunk_manager.cpp  download_manager.cpp  file_manager.cpp  upload_manager.cpp  websocket_client.cpp
hello-cpp/client/src/util/: error_handler.cpp  performance_monitor.cpp  stream_id_generator.cpp  verification_module.cpp
hello-cpp/client/tests/: CMakeLists.txt
hello-cpp/include/: common_types.h
hello-cpp/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  download-deps.ps1  download-deps.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-cpp/server/: CMakeLists.txt
hello-cpp/server/include/: audio_server_application.h
hello-cpp/server/include/handler/: websocket_message.h  websocket_message_handler.h
hello-cpp/server/include/memory/: memory_mapped_cache.h  memory_pool_manager.h  stream_context.h  stream_manager.h
hello-cpp/server/include/network/: audio_websocket_server.h
hello-cpp/server/src/: audio_server_application.cpp
hello-cpp/server/src/handler/: websocket_message_handler.cpp
hello-cpp/server/src/memory/: memory_mapped_cache.cpp  memory_pool_manager.cpp  stream_manager.cpp
hello-cpp/server/src/network/: audio_websocket_server.cpp
hello-cpp/server/tests/: CMakeLists.txt
hello-csharp/: AudioFileTransfer.csproj  AudioStreamCache.csproj  README.md
hello-csharp/AudioFileTransfer.Tests/: AudioFileTransfer.Tests.csproj
hello-csharp/AudioStreamCache.Tests/: AudioFileTransfer.Tests.csproj  AudioFileTransfer.Tests.xml
hello-csharp/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-csharp/src/: CliParser.cs  Logger.cs  Program.cs  Types.cs
hello-dart/: README.md  pubspec.yaml
hello-dart/lib/: audio_stream_client.dart  mmap_cache.dart
hello-dart/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-go/: README.md  go.mod
hello-go/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-java/: README.md  pom.xml
hello-java/audio-stream-client/: pom.xml
hello-java/audio-stream-server/: README.md  pom.xml
hello-java/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh  stress-test.sh
hello-kotlin/: README.md  build.gradle.kts
hello-kotlin/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-nodejs/: README.md  package.json
hello-nodejs/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-nodejs/src/: MmapCache.js  cli.js  file.js  index.js  logger.js  performance.js  websocket.js
hello-php/: README.md  audio_stream_client.php  audio_stream_server.php  composer.json
hello-php/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-php/src/: CliParser.php  Logger.php
hello-python/: README.md  pyproject.toml  requirements.txt  setup.py
hello-python/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-python/src/audio_client/: __init__.py  audio_client_application.py  cli.py  file_manager.py  logger.py  performance.py  websocket_client.py
hello-python/src/audio_client/core/: __init__.py  chunk_manager.py  download_manager.py  file_manager.py  upload_manager.py  websocket_client.py
hello-python/src/audio_client/util/: __init__.py  error_handler.py  stream_id_generator.py  verification_module.py
hello-python/src/audio_server/: __init__.py  audio_server_application.py  main.py
hello-python/src/audio_server/handler/: __init__.py  websocket_message.py  websocket_message_handler.py
hello-python/src/audio_server/memory/: __init__.py  memory_mapped_cache.py  memory_pool_manager.py  stream_context.py  stream_manager.py
hello-python/src/audio_server/network/: __init__.py  audio_websocket_server.py
hello-rust/: Cargo.toml  README.md
hello-rust/.cargo/: config.toml
hello-rust/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-rust/src/: cli.rs  lib.rs  logger.rs
hello-rust/src/client/: audio_client_application.rs  chunk_manager.rs  download_manager.rs  file_manager.rs  mod.rs  performance_monitor.rs  stream_id_generator.rs  upload_manager.rs  verification_module.rs  websocket_client.rs
hello-rust/src/server/: audio_server_application.rs  mod.rs
hello-rust/src/server/handler/: mod.rs  websocket_message_handler.rs
hello-rust/src/server/memory/: memory_mapped_cache.rs  memory_pool_manager.rs  mod.rs  stream_context.rs  stream_manager.rs
hello-rust/src/server/network/: audio_websocket_server.rs  mod.rs
hello-swift/: BUGFIX.md  Package.resolved  Package.swift  README.md  download-deps.ps1  download-deps.sh
hello-swift/Sources/: Logger.swift  Types.swift  main.swift
hello-swift/scripts/: build-client.ps1  build-client.sh  build-server.ps1  build-server.sh  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh
hello-typescript/: README.md  package.json
(+205 files in other folders)
