[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-audio-stream"
version = "1.0.0"
description = "Audio Stream Cache Client - Python Implementation"
authors = [{ name = "feuyeux", email = "feuyeux@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["audio", "stream", "websocket", "client"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["websockets>=14.0", "loguru>=0.7.3"]

[project.scripts]
audio-stream-client = "audio_client.audio_client_application:main"
audio-stream-server = "audio_server.audio_server_application:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "bandit>=1.7.8",
]

[project.urls]
Homepage = "https://github.com/feuyeux/audio-stream-cache"
Repository = "https://github.com/feuyeux/audio-stream-cache"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
enable_error_code = ["all"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
strict_optional = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
