[package]
name = "hello-audio-stream"
version = "1.0.0"
edition = "2021"

[lib]
name = "hello_audio_stream"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4.5.55", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
url = "2.5"
memmap2 = "0.9"
base64 = "0.22"
